# kubeplane

./: .dockerignore  .env.local  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  Taskfile.yml  artifacthub-repo.yml  devbox.json  helmfile.yaml  index.yaml  rustfmt.toml
.devcontainer/: compose.yml  devcontainer.json
.github/workflows/: helmfile-render.yaml  release-oci.yml  release.yml
.mirrord/: mirrord.json
apps/argo-cd/: argocd.values.yaml
apps/kubeplane/: helmfile.yaml  kubeplane.values.yaml
appsa/argo-cd/: helmfile.yaml
appsa/cert-manager/: letsencrypt-ci.values.yaml  selfsigned-ci.values.yaml
appsa/cilium/: helmfile.yaml
charts/generic/: Chart.yaml
charts/generic-helm/: Chart.yaml  README.md  values.schema.json  values.yaml
charts/generic-helm/examples/: e2e.yaml
charts/generic-helm/templates/: generic.yaml
charts/generic/templates/: generic.yaml
charts/kubeplane/: Chart.yaml  values.yaml
charts/kubeplane/templates/: _helpers.tpl  application.yaml  deployment.yaml  project.yaml  serviceaccount.yaml
helm/charts/generic/: Chart.yaml
helm/charts/generic/templates/: generic.yaml
helm/values/: argocd-values.yaml  argocd.yaml  cilium.yaml  cluster-issuers.yaml
kubeplane/: values.yaml
misc/apps/cert-manager/: helmfile.yaml
misc/apps/cilium/: cilium.values.yaml
rust/kp-operator/: Cargo.toml
rust/kp-operator/src/: main.rs
rust/kubeplane-operator/: Cargo.toml
rust/operator/: Cargo.toml
rust/operator/src/: main.rs
taskfiles/: _env.yml  _k8s.yml
(+72 files in other folders)
