[package]
name = "kubeplane-operator"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
kube = { version = "0.99.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }

[lints]
workspace = true
