[package]
name = "operator"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
kube = { version = "0.99.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
tokio = { version = "1.44.1", features = ["full"] }
anyhow = "1.0.97"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }

[lints]
workspace = true
